[fix] 오류 수정